--- a/css/style.scss
+++ b/css/style.scss
@@ -484,8 +484,7 @@ header{
     margin-bottom: 30px;
     .article_box{
         background-color: #fefefe;
-        margin-left: 10%;
-        margin-right: 2%;
+        margin: 0 2% 2% 2%;
         padding: 2vw;
         border-radius: 5px;
         .breadcrumbs{
